--- a/_includes/v2.4/release-notes/v2.4.0-release-notes.md
+++ b/_includes/v2.4/release-notes/v2.4.0-release-notes.md
@@ -2,113 +2,71 @@
 
 ## What's new
 
-#### Anomaly detection
+#### Compliance Reporting
 
-{{site.prodname}} {{page.version}} adds anomaly detection to find anomalies that may indicate
-a compromise of your network or cluster.
+{{site.prodname}} {{page.version}} introduces a compliance dashboard, and the ability to generate
+compliance reports.  
 
-It operates based on flow logs, which can be continuously analyzed or checked over a specific
-time range.  The jobs can detect IP sweeps, port scans and unusual traffic or destinations.
+The following types of reports can be created:
+- Inventory reports detailing the policies and white/black list status of endpoints, namespaces and services.
+- Network access reports containing network statistics (egress, ingress, mTLS, policies) for endpoints.
+- Policy audit reports containing a record of the changes to an asset.
 
-To get started using anomaly detection, [enable the jobs](../usage/intrusion-detection/enabling),
-and then [view any anomalies](../usage/intrusion-detection/viewing-anomalies).  More detailed
-descriptions of the jobs can be found [here](../usage/intrusion-detection/job-descriptions).
+The endpoints, namespaces or service accounts a report should cover can be configured, as well
+as the schedule on which to generate the reports.  Report summaries
+can be viewed in the {{site.prodname}} Manager UI and the full reports can be downloaded.
 
-#### Application layer policy
+After you've installed {{site.prodname}}, you can view the documentation for the feature [here](../reference/compliance-reports).
 
-Application layer policy enables finer grained policy using HTTP methods and paths and secures
-pod-to-pod traffic with mTLS.
+#### DNS Policies
 
-Application layer policy is now GA.  In addition to the functionality in the beta, ALP now supports:
-- DropActionOverride, enabling policy to be audited before applying it, and
-- HTTP action information in flow logs, telling you how many requests were allowed and how many were
-  denied.
+Users can now create global network policies that refer to fully qualified domain names.  This will
+enable cluster administrators to enforce best practice default deny egress policy.
 
-Once you've installed {{site.prodname}}, you can
-[enable application layer policy](../getting-started/kubernetes/installation/app-layer-policy),
-and try the [Application layer policy tutorial](../getting-started/kubernetes/tutorials/app-layer-policy).
-Available only on Kubernetes.
+Example use cases for this feature include:
+- Limiting egress access to only certain internet resources.
+- Providing egress access to certain cloud services.
 
-#### AWS security group and network policy integration
+Domain names can be written directly into policy rules, or placed in
+[GlobalNetworkSets](../reference/calicoctl/resources/globalnetworkset), which allow
+a collection of related domain names to be referred to at once.
 
-{{site.prodname}} {{page.version}} allows you to associate AWS security groups with Kubernetes pods.
-This allows you to enable connectivity between Kubernetes pods and other AWS resources, such as EC2
-instances and RDS databases while still being able to enforce fine grained security.
-This is accomplished by integrating the AWS Security Group and Kubernetes Network Policy models.
+Note that DNS names can only be used in egress allow (whitelist) rules in global policies.
+This prevents an untrusted endpoint from being able to evade the policy by accessing an IP directly.
 
-Detailed information on using this feature can be found [here](../usage/aws-security-group-integration/).
-To get started using this integration, install {{site.prodname}}, then
-[enable the AWS SG integration on your cluster](../getting-started/kubernetes/installation/aws-sg-integration).
+For more details on using DNS policies, see the documentation [here](../security/domain-based-policy).
 
-This feature is only available with the AWS CNI plugin, and is therefore Kubernetes only.
-The cluster must be within a single VPC.
+#### HELM installation
 
-#### Policy changelog in {{site.prodname}} manager
+[HELM](https://helm.sh) provides an easy way to install {{site.prodname}} by customizing settings
+in a single place (a chart) and then installing in one command.
 
-{{site.prodname}} Manager now displays the change history of network policies.
+To get started, follow the [HELM installation procedure](../getting-started/kubernetes/installation/helm).
 
-From the view or edit page for a policy, you can:
-- View the changes to that policy, including time, user and verb and expand the
-  row to see the policy at that time.
-- View diffs indicating what changes happened to the policy between any two
-  previous states.
-- View diffs between pending unsaved changes and the current (or a previous) saved version.
+#### Suspicious IP detection and prevention
 
-Please note that the changelog displayed is for a given policy name, so tier changes
-or switching between Kubernetes and Calico policies start a new changelog.  All events
-can always be viewed in the Kibana audit logs dashboard.
+{{site.prodname}} {{page.version}} can integrate with a threat feed to detect
+outbound connections to suspicious IPs.  This can also be configured to
+block connections to the IPs.
 
-#### {{site.prodname}} manager policy UI enhancements
+There is a graphical UI that displays the alerts that allows security teams trace
+events down to the originating endpoint.
 
-{{site.prodname}} {{page.version}} introduces a number of UI enhancements
-- Multiple policies can now be selected and moved between tiers at once.
-- Tiers can be selectively hidden from display.
-- All policies can be expanded simultaneously in the grid view.
-- The flow log visualization now animates between states, making it easier
-  to understand context when zooming in on flows.
+More details on this feature can be found [here](../security/suspicious-ips).
 
-#### Finer grained tiered policy RBAC
+#### Cluster audit view in {{site.prodname}} manager
 
-NetworkPolicy and GlobalNetworkPolicy RBAC can now be configured differently on a per tier basis.
-For example, a user can be given read access to policies in one tier and write access to policies
-in another.
-
-Consult the guide to [configuring tiered policy RBAC](../reference/cnx/rbac-tiered-policies) to
-get started using the new finer grained RBAC.
-
-Action is required when [upgrading from v2.2 or earlier releases](../getting-started/kubernetes/upgrade/upgrade-tsee).
-The old behavior (policy RBAC applies equally to all tiers the user can GET) can be retained, or 
-you can migrate your RBAC configuration by following those steps.
-
-#### Support for shared Elasticsearch clusters
-
-One Elasticsearch cluster can now be shared between multiple {{site.prodname}} clusters.
-To share an Elasticsearch cluster, [configure each Kubernetes cluster with a unique cluster name](../usage/logs/configure-elastic#customizing-the-index-names-when-sharing-elasticsearch-clusters).
-
-#### Flow log filtering
-
-High volume low importance flow logs can now be filtered out before they reach Elasticsearch.
-To set up flow log filtering, follow the [filtering documentation](../usage/logs/elastic/filtering).
-
-#### Elasticsearch index rotation
-
-The default retention periods are 7 days for flow logs and 366 days for audit logs.
-To adjust these durations, follow the instructions [here](../usage/logs/configure-elastic#configuring-retention-periods-for-elasticsearch-logs).
-
-#### Elasticsearch log archiving to S3
-
-{{site.prodname}} {{page.version}} introduces the ability to archive flow and audit logs to
-Amazon S3 for long term storage of compliance data.
-If you wish to use this feature, [this page](../usage/logs/elastic/s3-archive) describes how
-to configure {{site.prodname}} to connect to your bucket.
+{{site.prodname}} Manager now includes a timeline of network policy changes.
+Individual changes can be examined, and the list can be filtered by user,
+operation, date, or resource type or name.
 
 ## Upgrade notes
 
 #### Upgrading from {{site.prodname}} v2.2 or earlier
 
-{{site.prodname}} v2.3 introduces a change to how RBAC is applied to network policy resources
+{{site.prodname}} v2.3 introduced a change to how RBAC is applied to network policy resources
 that requires explicit actions when upgrading from a previous {{site.prodname}} release.
-The upgrade instructions can be found [here](../getting-started/kubernetes/upgrade/upgrade-tsee).
+The upgrade instructions can be found [here](../maintenance/kubernetes-upgrade-tsee).
 
 > **Important**: Failure to follow the upgrade procedure will result in non cluster-admin users
 > being unable to perform any operations on NetworkPolicy and GlobalNetworkPolicy resources.
