add other enhancements

--- a/_includes/v2.4/release-notes/v2.4.0-release-notes.md
+++ b/_includes/v2.4/release-notes/v2.4.0-release-notes.md
@@ -72,6 +72,12 @@ The upgrade instructions can be found [here](../maintenance/kubernetes-upgrade-t
 > being unable to perform any operations on NetworkPolicy and GlobalNetworkPolicy resources.
 {: .alert .alert-danger}
 
+## Other Enhancements
+- docs.tigera.io top-level navigation menus were updated and existing content was reorganized to match.
+- The {{site.prodname}} Manager was moved into the calico-monitoring namespace.
+- The {{site.prodname}} Manager and {{site.prodname}} API Server were split into their own manifests.
+- Calico was updated to v3.6.1
+
 ## Known issues
 
 - Application Layer Policy is unavailable on OpenShift.  We intend to add support once
